force-app/main/default/objects/Estabelecimento_Cnes__c/Estabelecimento_Cnes__c.object-meta.xml
<CustomObject>
    <description>objeto para armazenar dados dos estabelecimentos cnes</description>
    <label>Estabelecimento Cnes</label>
    <nameField>
        <label>Nome de Estabelecimento Cnes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Estabelecimentos Cnes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>