force-app/main/default/objects/Estabelecimento_Cnes__c/fields/codigoCNES__c.field-meta.xml
<CustomField>
    <fullName>codigoCNES__c</fullName>
    <label>codigoCNES</label>
    <length>50</length>
    <type>Text</type>
</CustomField>