force-app/main/default/objects/Estabelecimento_Cnes__c/fields/endereco_bairro__c.field-meta.xml
<CustomField>
    <fullName>endereco_bairro__c</fullName>
    <label>endereco_bairro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>