force-app/main/default/objects/Estabelecimento_Cnes__c/fields/endereco_cep__c.field-meta.xml
<CustomField>
    <fullName>endereco_cep__c</fullName>
    <label>endereco_cep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>