force-app/main/default/objects/Estabelecimento_Cnes__c/fields/endereco_complemento__c.field-meta.xml
<CustomField>
    <fullName>endereco_complemento__c</fullName>
    <label>endereco_complemento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>