force-app/main/default/objects/Estabelecimento_Cnes__c/fields/endereco_logradouro__c.field-meta.xml
<CustomField>
    <fullName>endereco_logradouro__c</fullName>
    <label>endereco_logradouro</label>
    <length>255</length>
    <type>Text</type>
</CustomField>