force-app/main/default/objects/Estabelecimento_Cnes__c/fields/endereco_numero__c.field-meta.xml
<CustomField>
    <fullName>endereco_numero__c</fullName>
    <label>endereco_numero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>