force-app/main/default/objects/Estabelecimento_Cnes__c/fields/equipamento_descricao__c.field-meta.xml
<CustomField>
    <fullName>equipamento_descricao__c</fullName>
    <label>equipamento_descricao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>