force-app/main/default/objects/Estabelecimento_Cnes__c/fields/equipamento_destinacao__c.field-meta.xml
<CustomField>
    <fullName>equipamento_destinacao__c</fullName>
    <label>equipamento_destinacao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>