force-app/main/default/objects/Estabelecimento_Cnes__c/fields/leito_dataAtualizacao__c.field-meta.xml
<CustomField>
    <fullName>leito_dataAtualizacao__c</fullName>
    <label>leito_dataAtualizacao</label>
    <type>DateTime</type>
</CustomField>