force-app/main/default/objects/Estabelecimento_Cnes__c/fields/leito_descricao__c.field-meta.xml
<CustomField>
    <fullName>leito_descricao__c</fullName>
    <label>leito_descricao</label>
    <length>255</length>
    <type>Text</type>
</CustomField>