force-app/main/default/objects/Estabelecimento_Cnes__c/fields/leito_quantidadeLeitoSUS__c.field-meta.xml
<CustomField>
    <fullName>leito_quantidadeLeitoSUS__c</fullName>
    <label>leito_quantidadeLeitoSUS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>