force-app/main/default/objects/Estabelecimento_Cnes__c/fields/nomeEmpresarial__c.field-meta.xml
<CustomField>
    <fullName>nomeEmpresarial__c</fullName>
    <label>nomeEmpresarial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>